# OpenGL_HM2-2

./: CMakeLists.txt
hm1/task15/: task15.cpp  task15.h
src/: main.cpp
